# rocket-project

./: docker-compose.yml  pyproject.toml
.claude/: settings.local.json
dags/: mini_0_hello.py  mini_1_etl_skeleton.py  mini_2_real_rocket.py  mini_3_schedule.py  mini_4_wikipedia.py  mini_5_branch_xcom.py  mini_6_sensor_1.py  mini_6_sensor_2.py
data/: launch_rows_20260224_150029.json  launches.json
data/events/: 2026-03-02.json
data/rocket/events/: 2026-02-28.json  2026-03-01.json  2026-03-02.json  2026-03-04.json  2026-03-05.json
data/stats/: 2026-03-02.csv
data/supermarket/1/: 2026-03-06.csv
data/supermarket/3/: 2026-03-06.csv
data/supermarket/processed/1/: 2026-03-06.out
data/supermarket/processed/3/: 2026-03-06.out
data/wiki/: upsert_pageviews_20250115_00.sql  upsert_pageviews_20250116_00.sql
src/rocket_project/etl/: launch_dummy.py
